--- a/Credit Risk Evaluator.ipynb
+++ b/Credit Risk Evaluator.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Prediction: I predict that the Linear Regression model will perform better than the Random Forest Classifier model. My reasoning is that this dataset has more numerical data than categorical. The Random Forest Classifier model tends to perform better when there is more categorical data as opposed to numerical and Linear Regression performs better with more numerical data."
+    "Prediction: I predict that the Random Forest Classifier model will perform better than the Linear Regression model. My reasoning is that this dataset is more complex and has wide ranging data points, so Random Forest Classifier's use of random sampling will give a more accurate representation."
    ]
   },
   {
@@ -360,7 +360,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Results: The Random Forest Classifier model performed slightly better than the Linear Regression model. I suppose the large scale of random sampling done in the RFC model yields a more accurate result than the algorithm within linear regression. "
+    "Results: The Random Forest Classifier model performed slightly better than the Linear Regression model. These results support my prediction. "
    ]
   },
   {
